<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/mainactivitybgcolor"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:text="@string/version_upgrade"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/bluetoothicon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bluetoothicon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/app_name"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/version_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/version_update"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/version_number"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:text="@string/version_updates"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>